# GarminPlugin

./: 404.html  HISTORY  Makefile  Makefile.in  README  aclocal.m4  compiling.html  config.h.in  configManager.cpp  configManager.h  configuration.html  configure  configure.ac  development.html  deviceManager.cpp  deviceManager.h  devices.html  donation.html  edge305Device.cpp  edge305Device.h  edge705Device.cpp  edge705Device.h  edge800Device.cpp  edge800Device.h  faq.html  fit2tcx.html  garminFilebasedDevice.cpp  garminFilebasedDevice.h  garminexpress.html  gpsDevice.cpp  gpsDevice.h  gpsFunctions.h  history.html  howto_garmin_connect.html  index.css  index.html  installation.html  log.cpp  log.h  main.cpp  (+11 more)
TcxBuilder/: TcxActivities.cpp  TcxActivities.h  TcxActivity.cpp  TcxActivity.h  TcxAuthor.cpp  TcxAuthor.h  TcxBase.cpp  TcxBase.h  TcxCreator.cpp  TcxCreator.h  TcxLap.cpp  TcxLap.h  TcxTrack.cpp  TcxTrack.h  TcxTrackpoint.cpp  TcxTrackpoint.h  TcxTypes.h
fit/: fit.cpp  fit.hpp  fitFileException.hpp  fitMsg_File_ID.hpp  fitMsg_Listener.hpp  fitReader.cpp  fit_accumulated_field.cpp  fit_accumulated_field.hpp  fit_accumulator.cpp  fit_accumulator.hpp  fit_activity_mesg.hpp  fit_activity_mesg_listener.hpp  fit_blood_pressure_mesg.hpp  fit_blood_pressure_mesg_listener.hpp  fit_capabilities_mesg.hpp  fit_capabilities_mesg_listener.hpp  fit_crc.cpp  fit_crc.hpp  fit_decode.cpp  fit_decode.hpp  fit_device_info_mesg.hpp  fit_device_info_mesg_listener.hpp  fit_device_settings_mesg.hpp  fit_device_settings_mesg_listener.hpp  fit_encode.cpp  fit_encode.hpp  fit_event_mesg.hpp  fit_event_mesg_listener.hpp  fit_factory.cpp  fit_factory.hpp  fit_field.cpp  fit_field.hpp  fit_field_capabilities_mesg.hpp  fit_field_capabilities_mesg_listener.hpp  fit_field_definition.cpp  fit_field_definition.hpp  fit_file_capabilities_mesg.hpp  fit_file_capabilities_mesg_listener.hpp  fit_file_creator_mesg.hpp  fit_file_creator_mesg_listener.hpp  (+50 more)
src/: Fit2TcxConverter.cpp  Fit2TcxConverter.h  Makefile.in  config.h.in  configManager.cpp  configManager.h  configure  configure.ac  deviceManager.cpp  deviceManager.h  edge305Device.cpp  edge305Device.h  garminFilebasedDevice.cpp  garminFilebasedDevice.h  gpsDevice.cpp  gpsDevice.h  gpsFunctions.h  log.cpp  log.h  main.cpp  messageBox.cpp  messageBox.h
src/TcxBuilder/: TcxActivities.cpp  TcxActivities.h  TcxActivity.cpp  TcxActivity.h  TcxAuthor.h  TcxBase.cpp  TcxBase.h  TcxCreator.cpp  TcxLap.cpp  TcxLap.h  TcxTrack.cpp  TcxTrack.h  TcxTrackpoint.cpp  TcxTrackpoint.h  TcxTypes.h
src/fit/: fitDefines.hpp  fitFileException.hpp  fitMsg.hpp  fitMsg_Activity.hpp  fitMsg_DeviceInfo.hpp  fitMsg_Event.hpp  fitMsg_File_Creator.hpp  fitMsg_File_ID.hpp  fitMsg_Lap.hpp  fitMsg_Listener.hpp  fitMsg_Record.hpp  fitMsg_Session.hpp  fitReader.cpp  fitReader.hpp
src/md5/: README  md5.c  md5.h  md5_loc.h
